az-aks/apps/tripapi/trip-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-deploy
  labels:
    application: scmtrip
    service: tripapi
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      application: scmtrip
      service: tripapi
  template:
    metadata:
      labels:
        application: scmtrip
        service: tripapi
    spec:
      automountServiceAccountToken: false
      containers:
        - name: application
          resources:
            requests:
              memory: '64Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '500m'
          ports:
            - containerPort: 80
          image: kkdcd5acrdev.azurecr.io/tripinsights/trips:1.0
          imagePullPolicy: Always
