az-aks/apps/tripapi/trip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripapi
  labels:
    application: scmtrip
    service: tripapi
spec:
  type: ClusterIP
  selector:
    application: scmtrip
    service: tripapi
  ports:
    - port: 80
      targetPort: 80
