az-aks/apps/tripapi/trip-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-trip
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: 'Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Accept-Language'
    nginx.ingress.kubernetes.io/cors-max-age: '600'
    nginx.ingress.kubernetes.io/proxy-body-size: '12m'
    nginx.ingress.kubernetes.io/rewrite-target: '/trip/$2'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: 20.76.158.8.nip.io
      http:
        paths:
          - path: /api/trip(\/|$)(.*)
            backend:
              serviceName: tripapi
              servicePort: 8080
